--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-
-.dropdown-menu a{
-  color: rgb(71, 71, 40) !important;
-}
 body {
   background: url("https://lh3.googleusercontent.com/pw/AM-JKLUqkc-5_4LR4_rYpuOeGwIyvyb6V9s-7K0DYGHQqfah3LYo2bSA_j23rG5GJ7li6M2HdtPZhWRwtHUMg3WutELDkRFb9R6py2zLZ4G3AWpBKQRHDDMhND7UCCdAcAJDbooRsSen1gUqP7yU5pG6lPtf=w924-h577-no?authuser=0" ) no-repeat center fixed ;
   background-size:cover;
@@ -13,8 +9,8 @@ body {
     font-weight: 400;
   }
 
-  .btn {
-    position: relative;
+  .nav-item.btn {
+    position: relative ;
     width: auto;
     border: 1px solid rgba(142, 216, 38, 0.768);
     background-color: rgba(96, 150, 10, 0.407);
@@ -28,6 +24,11 @@ body {
     margin: 4px;
     opacity: 0.8;
   }   
+
+  .btn {
+    border: 1px solid rgba(142, 216, 38, 0.44);
+    background-color: rgba(96, 150, 10, 0.407);
+  }
 
   .btn2 {
     position: relative;
@@ -46,7 +47,7 @@ body {
   }   
   
   .bg-success {
-    background-color:rgb(0, 0, 0);
+    background-color:rgb(111, 212, 3);
   }
 
 
@@ -59,3 +60,56 @@ body {
     background-color:rgba(83, 185, 55, 0.318)
   }
 
+  .border a{
+    position: relative;
+    width: auto;
+    border: 1px solid rgba(76, 162, 30, 0.574); 
+    background-color: rgba(142, 203, 11, 0.527);
+    line-height: 0.9;
+    letter-spacing: -0.5px;
+    text-align:center;
+    color: rgb(243, 255, 12);
+    padding: 0px;
+    cursor: pointer;
+    border-radius: 5%;
+    margin: 4px;
+    opacity: 0.8;
+  }
+  ul{
+    list-style-type:none;
+    }
+  li{
+    list-style-type:none;
+  }
+
+  .form-control{
+    background-color: rgba(76, 162, 30, 0.233); 
+    border-color: rgba(142, 203, 11, 0.193);
+  }
+  
+  .form-control:hover:not(:focus){
+    box-shadow: 0px 0px 3px 3px rgba(70, 247, 35, 0.325);
+    background: rgba(245, 245, 220, 0);
+    
+ }
+  
+  .form-control:focus:not(:hover) {
+    box-shadow: 5px 2px 2px 2px rgba(18, 208, 84, 0.766);
+    background-color: rgb(52, 31, 212) important!;
+ }
+
+  .btn3 {
+    position: relative ;
+    width: auto;
+    border: 1px solid rgba(142, 216, 38, 0.768);
+    background-color: rgba(96, 150, 10, 0.407);
+    line-height: 0.9;
+    letter-spacing: -0.5px;
+    text-align:center;
+    color: black;
+    padding: 0px;
+    cursor: pointer;
+    border-radius: 5%;
+    margin: 4px;
+    opacity: 0.8;
+  }   
