--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   background-size:cover;
 }
 
+
+h3{
+  font-weight: 100;
+  font-size: 31px;
+}
 .navbar-nav a{
     color: rgb(0, 0, 0) !important;
     font-size:large;
@@ -23,7 +28,7 @@ body {
     border-radius: 5%;
     margin: 4px;
     opacity: 0.8;
-  }   
+  } 
 
   .btn {
     border: 1px solid rgba(142, 216, 38, 0.44);
@@ -83,18 +88,18 @@ body {
   }
 
   .form-control{
-    background-color: rgba(76, 162, 30, 0.233); 
-    border-color: rgba(142, 203, 11, 0.193);
+    background-color: rgba(76, 162, 30, 0.747); 
+    border-color: rgba(43, 58, 11, 0.718);
   }
   
   .form-control:hover:not(:focus){
-    box-shadow: 0px 0px 3px 3px rgba(70, 247, 35, 0.325);
+    box-shadow: 0px 0px 3px 3px rgba(40, 160, 16, 0.325);
     background: rgba(245, 245, 220, 0);
     
  }
   
   .form-control:focus:not(:hover) {
-    box-shadow: 5px 2px 2px 2px rgba(18, 208, 84, 0.766);
+    box-shadow: 5px 2px 2px 2px rgba(18, 208, 85, 0.447);
     background-color: rgb(52, 31, 212) important!;
  }
 
