--- a/style.css
+++ b/style.css
@@ -3,21 +3,33 @@ body {
   background-size:cover;
 }
 
-
-h3{
-  font-weight: 100;
-  font-size: 31px;
-}
 .navbar-nav a{
     color: rgb(0, 0, 0) !important;
     font-size:large;
     font-weight: 400;
   }
 
+  .nav-item.btn {
+    position: relative ;
+    width: auto;
+    padding-block: 1px;
+    line-height: 0.9;
+    color: rgb(10, 46, 3);
+    margin: 4px;
+    opacity: 0.9;
+  } 
+
+  .navbar-toggler {
+    background-color:rgba(83, 185, 55, 0.318)
+  }
+
 .dropdown-menu.show{
   border: 1px solid rgba(142, 216, 38, 0.44);
   background-color: rgba(96, 150, 10, 0.407);
 }
+
+
+
 .accordion-item{
   background-color: rgba(0, 0, 0, 0);
 }
@@ -30,24 +42,10 @@ h3{
   color:black
 }
 
-  .nav-item.btn {
-    position: relative ;
-    width: auto;
-    border: 1px solid rgba(142, 216, 38, 0.768);
-    background-color: rgba(96, 150, 10, 0.407);
-    line-height: 0.9;
-    letter-spacing: -0.5px;
-    text-align:center;
-    color: black;
-    padding: 0px;
-    cursor: pointer;
-    border-radius: 5%;
-    margin: 4px;
-    opacity: 0.8;
-  } 
+
 
   .btn {
-    border: 1px solid rgba(142, 216, 38, 0.44);
+    border: 1px solid rgba(142, 216, 38, 0.111);
     background-color: rgba(96, 150, 10, 0.407);
   }
 
@@ -58,11 +56,11 @@ h3{
     line-height: 1.15;
     padding: 5px;
     opacity: 0.8;
+    
   }   
   .tipo1:hover:not(:focus){
     box-shadow: 0px 0px 10px 3px rgba(155, 215, 14, 0.436);
     background-color: rgba(142, 203, 11, 0.527);
-    
  }
 
 
@@ -71,25 +69,6 @@ h3{
     color:rgb(0, 0, 0);
   }
 
-  .navbar-toggler {
-    background-color:rgba(83, 185, 55, 0.318)
-  }
-
-  .border a{
-    position: relative;
-    width: auto;
-    border: 1px solid rgba(76, 162, 30, 0.574); 
-    background-color: rgba(142, 203, 11, 0.527);
-    line-height: 0.9;
-    letter-spacing: -0.5px;
-    text-align:center;
-    color: rgb(243, 255, 12);
-    padding: 0px;
-    cursor: pointer;
-    border-radius: 5%;
-    margin: 4px;
-    opacity: 0.8;
-  }
   ul{
     list-style-type:none;
     }
@@ -115,7 +94,6 @@ h3{
   .form-control:hover:not(:focus){
     box-shadow: 0px 0px 3px 3px rgba(40, 160, 16, 0.325);
     background: rgba(245, 245, 220, 0);
-    
  }
   
   .form-control:focus:not(:hover) {
@@ -123,18 +101,9 @@ h3{
     background-color: rgb(52, 31, 212) important!;
  }
 
-  .btn3 {
-    position: relative ;
-    width: auto;
-    border: 1px solid rgba(142, 216, 38, 0.768);
-    background-color: rgba(96, 150, 10, 0.407);
-    line-height: 0.9;
-    letter-spacing: -0.5px;
-    text-align:center;
-    color: black;
-    padding: 0px;
-    cursor: pointer;
-    border-radius: 5%;
-    margin: 4px;
-    opacity: 0.8;
-  }   
+
+
+ pamelaculia{
+   border:black;
+   border-radius: 5%;
+ }
