--- a/style.css
+++ b/style.css
@@ -41,8 +41,24 @@ body {
   background-color: rgba(96, 150, 10, 0.407);
   color:black
 }
+.accordion-button:hover{
+  background-color: #b2ff4e49;
+}
+.accordion{
+  background-color:rgba(84, 134, 31, 0.251);
+}
+
+.btn2{
+
+  border: 1px solid rgba(38, 136, 216, 0.111);
+  background-color: rgba(223, 38, 38, 0.407);
+}
 
 
+.btn-outline-success{
+background-color: rgb(255, 255, 0);
+color: rgb(0, 0, 0);
+}
 
   .btn {
     border: 1px solid rgba(142, 216, 38, 0.111);
@@ -51,8 +67,9 @@ body {
 
   .tipo1 {
     width: auto;
-    border: 1px solid rgba(76, 162, 30, 0.574);
-    background-color: rgba(127, 186, 31, 0.407);
+    border: 1px solid rgba(142, 216, 38, 0.111);
+    background-color: rgba(96, 150, 10, 0.407);
+    color:black;
     line-height: 1.15;
     padding: 5px;
     opacity: 0.8;
@@ -65,6 +82,11 @@ body {
 
 
   .btn:hover {
+    background-color: #b2ff4e49;
+    color:rgb(0, 0, 0);
+  }
+
+  .tipo1:hover {
     background-color: #b2ff4e49;
     color:rgb(0, 0, 0);
   }
@@ -92,18 +114,15 @@ body {
   }
   
   .form-control:hover:not(:focus){
-    box-shadow: 0px 0px 3px 3px rgba(40, 160, 16, 0.325);
+    box-shadow: 0px 0px 3px 3px rgba(148, 193, 45, 0.325);
     background: rgba(245, 245, 220, 0);
  }
   
   .form-control:focus:not(:hover) {
     box-shadow: 5px 2px 2px 2px rgba(18, 208, 85, 0.447);
-    background-color: rgb(52, 31, 212) important!;
+    background-color: rgb(112, 212, 31) important!;
  }
 
-
-
- pamelaculia{
-   border:black;
-   border-radius: 5%;
+ .flagf{
+   border-color: black;
  }
