--- a/style.css
+++ b/style.css
@@ -66,13 +66,12 @@ color: rgb(0, 0, 0);
   }
 
   .tipo1 {
-    width: auto;
     border: 1px solid rgba(142, 216, 38, 0.111);
     background-color: rgba(96, 150, 10, 0.407);
     color:black;
     line-height: 1.15;
-    padding: 5px;
     opacity: 0.8;
+    border: 1px solid rgba(0, 0, 0, 0.21);
     
   }   
   .tipo1:hover:not(:focus){
@@ -99,14 +98,15 @@ color: rgb(0, 0, 0);
   }
 
   .form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: rgba(0, 0, 0, 0.649);
+    color: rgba(0, 0, 0, 0.74);
     font-style: italic;
   }
   
   .form-control{
-    background-color: rgba(76, 162, 30, 0.747); 
+    background-color: rgba(96, 150, 10, 0.407);
     border-color: rgba(43, 58, 11, 0.718);
-    color:black
+    color:black;
+    
   }
   .form-control.placeholder{
     color:black !important;
