--- a/style.css
+++ b/style.css
@@ -126,3 +126,37 @@ color: rgb(0, 0, 0);
  .flagf{
    border-color: black;
  }
+
+ .checkbox-custom {
+  opacity: 0;
+  position: absolute;
+}
+.checkbox-custom,
+.checkbox-custom-label {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 5px;
+  cursor: pointer;
+}
+.checkbox-custom + .checkbox-custom-label:before {
+  content: '';
+  background: rgba(146, 207, 40, 0.616);
+  border-radius: 5px;
+  border: 2px solid rgba(220, 230, 203, 0.115);
+  display: inline-block;
+  vertical-align: middle;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+}
+.checkbox-custom:checked + .checkbox-custom-label:before {
+  content: '';
+  background: rgba(33, 72, 14, 0.448);
+  border-radius: 5px;
+  border: 2px solid rgba(80, 131, 44, 0.625);
+  display: inline-block;
+  vertical-align: middle;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+}
